<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/text_num1"
        android:layout_width="237dp"
        android:layout_height="48dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="60dp"
        android:ems="10"
        android:hint="@string/txt_num1"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/text_num2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.242"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Calcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:onClick="Calcular"
        android:text="Calcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.403"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/text_Resultado"
        android:layout_width="230dp"
        android:layout_height="81dp"
        android:hint="@string/txt_Resultado"
        android:text="Resultado"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.37"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Calcular"
        app:layout_constraintVertical_bias="0.244" />

    <EditText
        android:id="@+id/text_num2"
        android:layout_width="246dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/txt_num2"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.242"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_num1" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="200dp"
        android:layout_height="190dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.264"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_num2">

        <RadioButton
            android:id="@+id/RB_Suma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RB_Suma" />

        <RadioButton
            android:id="@+id/RB_Resta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RB_Resta" />

        <RadioButton
            android:id="@+id/RB_Multiplicacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RB_Multiplicacion" />

        <RadioButton
            android:id="@+id/RB_Division"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RB_Division" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>